--- a/card-product.html
+++ b/card-product.html
@@ -20,12 +20,41 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <nav class="navbar navbar-expand-lg">
-                                <div class="navbar-city">
+                                <div class="navbar-city pc">
                                     <p>Ваш город</p>
                                     <a href="#!">Новосбирск</a>
                                 </div>
                                 <div class="navbar-collapse">
+                                    <div class="mob">
+                                        <div class="mob-search d-flex align-items-center justify-content-between">
+                                            <div class="navbar-city">
+                                                <p>Ваш город</p>
+                                                <a href="#!">Новосбирск</a>
+                                            </div>
+                                            <a href="#!" class="mob-search-btn"><img src="images/icons/header-search-icon.svg" alt=""></a>
+                                        </div>
+
+                                        <ul class="mob-catalog">
+                                            <li class="nav-item dropdown">
+                                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                                    Каталог товаров <img src="images/icons/mob-arrow.svg" alt="">
+                                                </a>
+                                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                                    <li><a class="dropdown-item" href="#">Матрасы</a></li>
+                                                    <li><a class="dropdown-item" href="#">Детские матрасы и аксессуары</a></li>
+                                                    <li><a class="dropdown-item" href="#">Чехлы и наматрасники</a></li>
+                                                    <li><a class="dropdown-item" href="#">Подушки и одеяла</a></li>
+                                                    <li><a class="dropdown-item" href="#">Как выбрать матрас</a></li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    
                                     <ul class="navbar-nav">
+                                        <li class="nav-item mob">
+                                            <a class="nav-link sale" href="#!">Акции и скидки</a>
+                                        </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="#!">О нас</a>
                                         </li>
@@ -42,6 +71,19 @@
                                             <a class="nav-link" href="#!">Контакты</a>
                                         </li>
                                     </ul>
+
+                                    <div class="mob">
+                                        <div class="mob-menu-call">
+                                            <div class="numbers">
+                                                <a href="tel:8 (963) 944-99-91"><img src="images/icons/phone-icon.svg" alt=""> 8 (963)
+                                                    944-99-91</a>
+                                                <span>c 09:00 до 19:00</span>
+                                            </div>
+                                            <div class="callback">
+                                                <a href="#!" class="btn-blue">Заказать звонок</a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </nav>
                         </div>
@@ -51,25 +93,33 @@
             <div class="container">
                 <div class="head-assets">
                     <div class="logo">
+                        <div class="mob">
+                            <a href="#!" class="menu-opener">
+                                <span class="one"></span>
+                                <span class="two"></span>
+                                <span class="three"></span>
+                            </a>
+                        </div>
                         <a href="#!"><img src="images/logo.png" alt=""></a>
                     </div>
-                    <div class="head-search">
+                    <div class="head-search pc">
                         <form action="#!">
                             <input type="text" placeholder="Поиск по сайту">
                             <button><img src="images/icons/header-search-icon.svg" alt=""></button>
                         </form>
                     </div>
-                    <div class="callback">
+                    <div class="callback pc">
                         <a href="#!" class="btn-blue">Заказать звонок</a>
                     </div>
-                    <div class="numbers">
+                    <div class="numbers pc">
                         <a href="tel:8 (963) 944-99-91"><img src="images/icons/phone-icon.svg" alt=""> 8 (963)
                             944-99-91</a>
                         <span>c 09:00 до 19:00</span>
                     </div>
 
                     <div class="head-right">
-                        <div class="favorite">
+                        <a href="tel:" class="mob"><img src="images/icons/phone-icon.svg" alt=""></a>
+                        <div class="favorite pc">
                             <a href="#!">
                                 <svg width="38" height="38" viewBox="0 0 38 38" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -95,7 +145,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container-fluid header-links-con">
+            <div class="container-fluid header-links-con pc">
                 <div class="container">
                     <div class="header-links">
                         <a href="#!">Матрасы</a>
@@ -661,9 +711,43 @@
             </div>
         </footer>
         <!-- footer end -->
+
+        <div class="ftr-mob">
+            <a href="#!">
+                <span class="ftr-mob-img">
+                    <img src="images/icons/ftr-catalog-icon.svg" alt="">
+                </span>
+                <span>Каталог</span>
+            </a>
+            <a href="#!">
+                <span class="ftr-mob-img">
+                    <img src="images/icons/ftr-search-icon.svg" alt="">
+                </span>
+                <span>Поиск</span>
+            </a>
+            <a href="#!">
+                <span class="ftr-mob-img">
+                    <img src="images/icons/ftr-sale-icon.svg" alt="">
+                </span>
+                <span>Акции</span>
+            </a>
+            <a href="#!">
+                <span class="ftr-mob-img">
+                    <img src="images/icons/ftr-favorite-icon.svg" alt="">
+                </span>
+                <span>Избранное</span>
+            </a>
+            <a href="#!">
+                <span class="ftr-mob-img">
+                    <img src="images/icons/ftr-profile-icon.svg" alt="">
+                </span>
+                <span>Профиль</span>
+            </a>
+        </div>
     </div>
 
     <!-- js -->
+    <script src="js/jquery-3.7.0.min.js.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="libs/bootstrap5/bootstrap.min.js"></script>
     <script src="js/app.js"></script>
